<resources>
    <string name="app_name">Android群英传</string>
    <string name="oa">ObjectAnimator</string>
    <string name="one_title">第一章-Android体系与系统架构</string>
    <string name="tip1">1.android体系架构</string>
    <string name="tip2">2.Android App组件架构</string>
    <string name="tv_context">Linux层："\n""\n"Android最底层核心的部分Dalvik与ART：Dalvik包含一整套Android运行环境虚拟机，
        每个app都会分配dalvik虚拟机来保证相互之间不受干扰，并保持独立。特点是运行时编译。5.x之后，ART模式取代Dalvik，特点是安装时就进行编译，以后运行就不用编译了。"\n"
        Framwork"\n""\n"
        Standard libraries:android的标准库"\n""\n"
        Aplication:包含NDK开发，和Java开发。</string>
    <string name="tv_context1">
        a.四大组件Activity,Service,broadcast,contentProvider通过Intent，通信，传递信息，交换数据。"\n""\n"
        b.应用运行上下文对象Context,在程序中，我们可以理解为当前对象在程序中所处的一个环境，一个与系统交互的过程。Activity,service,Application,都是继承context."\n""\n"
        c.系统交互的过程。Activity,service,Application,都是继承context.
    </string>
    <string name="three_title">第三章-控件架构与自定义架构</string>
    <string name="_1">1.控件架构</string>
    <string name="viewgroup_view">大致分为两类ViewGroup控件和View控件</string>
    <string name="default_data">默认值是1</string>
    <string name="hash_map">hashMap遍历</string>
    <string name="begin">开启</string>
    <string name="stop">停止</string>
    <string name="bind">绑定</string>
    <string name="unbind">解绑</string>
    <string name="callback">callback监听服务进程变化</string>
    <string name="hash_map_2">hash_map遍历键值对</string>
    <string name="tv_demo">TextView</string>
    <string name="down_img">下载图片</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_line">下是一段绘制直线路径的代码，这里需要注意的是，上面代码中的画笔样式设为描边，默认是填充的。 也就是在默认情况下，多条线相连形成闭环后，中间的区域会被填充。 绘制直线路径涉及：起点、终点和闭环。</string>

</resources>
